--- a/static/styles.scss
+++ b/static/styles.scss
@@ -27,12 +27,31 @@ $transition-time: 0.3s;
   justify-content: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   // @include hover-effect;
-}
 
-.player-card .controls{
+  .controls{
     position: absolute;
     top: 0;
     right: 0;
+}
+}
+
+.new-player-card {
+  @extend .player-card;
+  cursor: pointer;
+
+  .join-icon {
+    font-size: 120px;
+    color: grey;
+    transition: transform 0.3s ease, color 0.3s ease;
+  }
+
+  &:hover {
+    background: #e0e0e0;
+    .join-icon {
+      transform: scale(1.2);
+      color: black;
+    }
+  }
 }
 
 
@@ -53,6 +72,17 @@ $transition-time: 0.3s;
 
 %panel {
     background-color: rgba(255, 252, 245, 0.58);
+}
+
+.spectators {
+  @extend %panel;
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 8px;
+  padding-right: 8px;
 }
 
 .controls {
