--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,26 @@
-.player-card, .new-player-card {
+body {
+  margin: 0;
+  background-color: black;
+}
+
+.background {
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: black url("/user-content/6r34a.png") center no-repeat;
+  background-color: black;
+  background-size: cover;
+  filter: blur(5px) brightness(0.5);
+}
+
+.panel, .notes, .controls-block, .controls, .spectators, .spectators-controls, .card, .new-player-card, .player-card {
+  background-color: rgba(255, 252, 245, 0.58);
+}
+
+.card, .new-player-card, .player-card {
   width: 200px;
-  height: 300px;
+  height: 250px;
   position: relative;
   border: 1px solid grey;
   border-radius: 8px;
@@ -11,22 +31,36 @@
   justify-content: center;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-.player-card .controls, .new-player-card .controls {
+
+.player-card:hover .controls {
+  display: block;
   position: absolute;
   top: 0;
   right: 0;
 }
+.player-card .controls {
+  display: none;
+}
+.player-card .notes.hover {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  z-index: 1;
+}
+.player-card .notes {
+  display: none;
+}
 
 .new-player-card {
+  opacity: 0.5;
   cursor: pointer;
 }
 .new-player-card .join-icon {
   font-size: 120px;
   color: grey;
   transition: transform 0.3s ease, color 0.3s ease;
-}
-.new-player-card:hover {
-  background: #e0e0e0;
 }
 .new-player-card:hover .join-icon {
   transform: scale(1.2);
@@ -35,7 +69,7 @@
 
 .avatar {
   width: 200px;
-  height: 300px;
+  height: 250px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -45,18 +79,23 @@
   opacity: 0.5;
 }
 
-.controls, .spectators {
-  background-color: rgba(255, 252, 245, 0.58);
-}
-
-.spectators {
+.spectators, .spectators-controls {
   position: absolute;
   right: 0;
   top: 0;
   display: flex;
-  flex-direction: row-reverse;
+  padding: 3px;
   gap: 8px;
   padding-right: 8px;
+}
+.spectators div, .spectators-controls div {
+  display: flex;
+  flex-direction: row;
+  gap: 6px;
+}
+
+.spectators-controls:hover {
+  cursor: pointer;
 }
 
 .controls-block {
@@ -66,6 +105,12 @@
   display: flex;
   flex-direction: row-reverse;
 }
+.controls-block:hover div {
+  display: flex;
+}
+.controls-block div {
+  display: none;
+}
 
 .controls:hover {
   background-color: lightgreen;
@@ -73,11 +118,25 @@
 }
 
 #players {
+  padding-top: 80px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
   gap: 30px;
+}
+
+.notes {
+  padding: 8px;
+  width: 200px;
+  height: 200px;
+  font-size: 14px;
+}
+
+#notes-block {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
 }
 
 /*# sourceMappingURL=styles.css.map */
