lower debounce, avatar deletetion

--- a/static/styles.scss
+++ b/static/styles.scss
@@ -6,7 +6,7 @@ $label-height: calc(#{$card-height}/4);
 $border-color: grey;
 $hover-scale: 1.05;
 $transition-time: 0.3s;
-$bg-url: url("/user-content/6r34a.png");
+$bg-url: url("/media/bar-background.jpg");
 
 
 $blur-amount: 5px;
