--- a/static/styles.css
+++ b/static/styles.css
@@ -8,7 +8,7 @@ body {
   z-index: -1;
   width: 100%;
   height: 100%;
-  background: black url("/user-content/6r34a.png") center no-repeat;
+  background: black url("/media/bar-background.jpg") center no-repeat;
   background-color: black;
   background-size: cover;
   filter: blur(5px) brightness(0.5);
