--- a/static/styles.scss
+++ b/static/styles.scss
@@ -12,7 +12,7 @@ $bg-url: url("/media/bar-background.jpg");
 $blur-amount: 5px;
 $brightness: 0.5;
 
-body {
+body.who-am-i {
   margin: 0;
   background-color: black;
 }
