--- a/static/styles.scss
+++ b/static/styles.scss
@@ -114,7 +114,7 @@ body.who-am-i {
     background-color: rgba(255, 239, 201, 1);
     cursor: move;
 
-    textarea {
+    .label-text {
       width: $label-width;
       height: $label-height;
       background-color: transparent;
@@ -123,8 +123,7 @@ body.who-am-i {
     }
   }
 
-  .label-hidden::after {
-    content: attr(dt-text);
+  .label-hidden {
     position: absolute;
     font-size: 40px;
     left: 0;
@@ -145,7 +144,7 @@ body.who-am-i {
   // animation: momentum 0.5s ease-in-out;
   transition: left 0.5s ease, top 0.5s ease;
 
-  textarea {
+  .label-text {
     transition: width 0.5s ease, height 0.5s ease;
   }
 }
