--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,3 +1,7 @@
+.material-icons {
+  font-size: 35px !important;
+}
+
 textarea:focus,
 input:focus {
   outline: none;
@@ -20,12 +24,13 @@ body.who-am-i {
 }
 
 .panel, .notes, .controls-block, .controls, .spectators, .spectators-controls, .card, .new-player-card, .player-card-body {
+  font-size: 20px;
   background-color: rgba(255, 252, 245, 0.58);
 }
 
 .card, .new-player-card, .player-card-body {
-  width: 220px;
-  height: 250px;
+  width: 280px;
+  height: 300px;
   position: relative;
   border: 1px solid grey;
   border-radius: 8px;
@@ -72,15 +77,19 @@ body.who-am-i {
   position: absolute;
   top: 0;
   box-shadow: 0 0 5px 1px black;
-  left: calc(50% - 220px / 2 / 2);
+  left: calc(50% - 280px / 2 / 2);
   z-index: 30;
   padding: 5px;
   background-color: rgb(255, 239, 201);
   cursor: move;
 }
 .player-card .label .label-text {
-  width: calc(220px / 2);
-  height: calc(250px / 4);
+  text-align: center;
+  font-size: 20px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  scrollbar-width: none;
+  width: calc(280px / 2);
+  height: calc(300px / 4);
   background-color: transparent;
   border: none;
 }
@@ -120,8 +129,8 @@ body.who-am-i {
 }
 
 .avatar {
-  width: 220px;
-  height: 250px;
+  width: 280px;
+  height: 300px;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -179,10 +188,11 @@ body.who-am-i {
 }
 
 .notes {
+  scrollbar-width: none;
   padding: 8px;
-  width: 200px;
-  height: 200px;
-  font-size: 14px;
+  width: 280px;
+  height: 300px;
+  font-size: 24px;
 }
 
 #notes-block {
