--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -1,8 +1,11 @@
 // Variables for reusable styles
-$card-width: 220px;
-$card-height: 250px;
+$card-width: 280px;
+$card-height: 300px;
 $label-width: calc(#{$card-width}/2);
 $label-height: calc(#{$card-height}/4);
+$font-size: 20px;
+$icons-font-size: 35px;
+$notes-font-size: 24px;
 $border-color: grey;
 $hover-scale: 1.05;
 $transition-time: 0.3s;
@@ -11,6 +14,10 @@ $bg-url: url("/media/bar-background.jpg");
 
 $blur-amount: 5px;
 $brightness: 0.5;
+
+.material-icons {
+  font-size: $icons-font-size !important;
+}
 
 
 textarea:focus,
@@ -49,6 +56,7 @@ body.who-am-i {
 
 
 .panel {
+  font-size: $font-size;
   background-color: rgba(255, 252, 245, 0.58);
 }
 
@@ -115,6 +123,10 @@ body.who-am-i {
     cursor: move;
 
     .label-text {
+      text-align: center;
+      font-size: $font-size;
+      font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+      scrollbar-width: none;
       width: $label-width;
       height: $label-height;
       background-color: transparent;
@@ -251,13 +263,12 @@ body.who-am-i {
 
 // notes and notes block
 
-$notes-font-size: 14px;
-
 .notes {
+  scrollbar-width: none;
   @extend .panel;
   padding: 8px;
-  width: 200px;
-  height: 200px;
+  width: $card-width;
+  height: $card-height;
   font-size: $notes-font-size;
 }
 
