add background edit

--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -9,7 +9,7 @@ $notes-font-size: 24px;
 $border-color: grey;
 $hover-scale: 1.05;
 $transition-time: 0.3s;
-$bg-url: url("/media/bar-background.jpg");
+$bg-url: url("/media/background.jpg");
 
 
 $blur-amount: 5px;
