--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -17,7 +17,7 @@ body.who-am-i {
   z-index: -1;
   width: 100%;
   height: 100%;
-  background: black url("/media/bar-background.jpg") center no-repeat;
+  background: black url("/media/background.jpg") center no-repeat;
   background-color: black;
   background-size: cover;
   filter: blur(5px) brightness(0.5);
