--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -20,29 +20,8 @@ $brightness: 0.5;
 }
 
 
-textarea:focus,
-input:focus {
+textarea:focus, input:focus {
   outline: none;
-}
-
-body.who-am-i {
-  margin: 0;
-  background-color: black;
-}
-
-.background {
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-
-  // Overlay background with adjustments
-  background: black $bg-url center no-repeat;
-  background-color: black;
-  background-size: cover;
-
-  // Effects
-  filter: blur($blur-amount) brightness($brightness);
 }
 
 // Mixin for hover effects
@@ -248,17 +227,6 @@ body.who-am-i {
 .controls:hover {
   background-color: lightgreen;
   cursor: pointer;
-}
-
-// Players table
-
-#players {
-  padding-top: 80px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 30px
 }
 
 // notes and notes block
